--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,9 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description"
+        content="A Flutter app that empowers citizens to participate in local governance and community projects.">
+
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -32,9 +34,53 @@
 
     <title>greenvoice</title>
     <link rel="manifest" href="manifest.json">
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        #splash {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #FFFFFF;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        #splash img {
+            width: 90%;
+            /* Takes up 90% of the container width */
+            max-width: 600px;
+            /* But never larger than 600px */
+            height: auto;
+            object-fit: contain;
+            /* Ensures the image keeps its aspect ratio */
+        }
+    </style>
 </head>
 
 <body>
+    <div id="splash">
+        <img src="assets/splash.gif" alt="Splash Screen">
+    </div>
+
+    <script>
+        window.addEventListener('load', function () {
+            var splash = document.getElementById('splash');
+            setTimeout(function () {
+                splash.style.display = 'none';
+            }, 3500); // Adjust GIF timeout
+        });
+    </script>
+
     <script src="flutter_bootstrap.js" async></script>
     <script type="module">
         // Import the functions you need from the SDKs you need
